force-app/main/default/objects/Case/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <inlineHelpText>Will the functionality impact Internal Starbucks Users, External Partners, or Both?</inlineHelpText>
    <label>Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>