force-app/main/default/objects/Case/fields/Business_Process_Owner_s__c.field-meta.xml
<CustomField>
    <fullName>Business_Process_Owner_s__c</fullName>
    <inlineHelpText>List all Regions and Owners</inlineHelpText>
    <label>Business Process Owner(s)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>