force-app/main/default/objects/Case/fields/Business_Rules__c.field-meta.xml
<CustomField>
    <fullName>Business_Rules__c</fullName>
    <inlineHelpText>Identify business rules captured or referred to in this business requirement.</inlineHelpText>
    <label>Business Rules</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>