force-app/main/default/objects/Case/fields/Current_Process__c.field-meta.xml
<CustomField>
    <fullName>Current_Process__c</fullName>
    <inlineHelpText>Describe the current process as it is today.

Note: This process might change once in Salesforce.</inlineHelpText>
    <label>Current Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>