force-app/main/default/objects/Case/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <inlineHelpText>Describe in one or two sentences the scope and content of the business requirement. Describe what the business wants to do (or get done).</inlineHelpText>
    <label>Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>