force-app/main/default/objects/Case/fields/Input_Summary__c.field-meta.xml
<CustomField>
    <fullName>Input_Summary__c</fullName>
    <inlineHelpText>Identify any data input by the users. What are the fields/data elements that must be captured? (Feel free to provide this as an attachment, if needed)</inlineHelpText>
    <label>Input Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>