force-app/main/default/objects/Case/fields/JIRA_URL__c.field-meta.xml
<CustomField>
    <fullName>JIRA_URL__c</fullName>
    <label>JIRA URL</label>
    <type>Url</type>
</CustomField>