force-app/main/default/objects/Case/fields/Level_of_Effort__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Effort__c</fullName>
    <inlineHelpText>Small; 6 - 12 dev hours
Medium: 12 - 24 dev hours
Large: 24 - 36 dev hours
X-Large: Over 36 dev hours</inlineHelpText>
    <label>Level of Effort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X-Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>