force-app/main/default/objects/Case/fields/Outputs_Summary__c.field-meta.xml
<CustomField>
    <fullName>Outputs_Summary__c</fullName>
    <inlineHelpText>Identify data output by the system or the users. After the system processes the information, what should the users expect to see as an output? (e.g. Fields on a page, Report, Dashboards, Email, excel output, etc.)</inlineHelpText>
    <label>Outputs Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>