force-app/main/default/objects/Case/fields/Planned_Phase__c.field-meta.xml
<CustomField>
    <fullName>Planned_Phase__c</fullName>
    <label>Planned Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>MVP</fullName>
            </value>
            <value>
                <fullName>Post-MVP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>