force-app/main/default/objects/Case/fields/Provide_the_link_of_the_issue__c.field-meta.xml
<CustomField>
    <fullName>Provide_the_link_of_the_issue__c</fullName>
    <inlineHelpText>Please provide the link where you experienced the issue.</inlineHelpText>
    <label>Provide the link of the issue</label>
    <type>Url</type>
</CustomField>