force-app/main/default/objects/Case/fields/Users_and_Access__c.field-meta.xml
<CustomField>
    <fullName>Users_and_Access__c</fullName>
    <inlineHelpText>1. Identify all User Roles involved in this process (Identify the Roles owning/initiating, supporting, or informed by the process/requirement)

2. Should these User Roles be able to Create and Edit, View Only, or No Visibility) ?</inlineHelpText>
    <label>Users and Access</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>