force-app/main/default/objects/Case/fields/Value_delivered_to_the_Organization__c.field-meta.xml
<CustomField>
    <fullName>Value_delivered_to_the_Organization__c</fullName>
    <inlineHelpText>Describe what benefits implementing this feature/functionality will bring to the organization).</inlineHelpText>
    <label>Value delivered to the Organization</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>