force-app/main/default/objects/Case/fields/What_test_script_step_is_this__c.field-meta.xml
<CustomField>
    <fullName>What_test_script_step_is_this__c</fullName>
    <label>What test script step is this?</label>
    <type>TextArea</type>
</CustomField>