force-app/main/default/objects/Case/fields/Which_test_script_is_this_related_to__c.field-meta.xml
<CustomField>
    <fullName>Which_test_script_is_this_related_to__c</fullName>
    <label>Which test script is this related to?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>External Experience</fullName>
            </value>
            <value>
                <fullName>Not in a test script</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>