force-app/main/default/objects/Case/fields/Why__c.field-meta.xml
<CustomField>
    <fullName>Why__c</fullName>
    <inlineHelpText>Why is there a need to build this requirement in Salesforce? What is the problem that needs to be solved?</inlineHelpText>
    <label>Why?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>