force-app/main/default/objects/Case/recordTypes/Defect_Suggestion.recordType-meta.xml
<RecordType>
    <fullName>Defect_Suggestion</fullName>
    <active>true</active>
    <businessProcess>Defect %2F Suggestion</businessProcess>
    <description>Log an issue, defect, or suggestion.</description>
    <label>Defect / Suggestion</label>
</RecordType>