force-app/main/default/objects/Case/recordTypes/Requirement.recordType-meta.xml
<RecordType>
    <fullName>Requirement</fullName>
    <active>true</active>
    <businessProcess>Requirement</businessProcess>
    <description>Submit a new requirement for leadership to review.</description>
    <label>Requirement</label>
</RecordType>